cv-spa-app/src/App.css
:root {
  --background: #d1d1d1;
  --text-primary: #333333;
  --text-secondary: #00609f;
  --text-accent: #a06c0c;
  --error: #FF6347;
  --success: #32CD32;
  --neutral: #808080;
  --ff-primary: "Roboto", sans-serif;
}

[data-theme='dark'] {
  --background: #1d1d20;
  --text-primary: #d3d3d3;
  --text-secondary: #4ECDC4;
  --text-accent: #FFD700;
  --error: #FF6347;
  --success: #32CD32;
  --neutral: #A9A9A9;
}

.app {
  height: 100svh;
  max-height: 100svh;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  transition: all .5s;
}

p,
span,
h1,
h2,
h3 {
  font-family: var(--ff-primary);
}


p,
span {
  color: var(--text-primary);
}

h1,
h2,
h3 {
  color: var(--text-secondary);
  line-height: 1;
  font-weight: 900;
  text-shadow: black;
}

.Language_button {
  position: fixed;
  background-color: var(--text-secondary);
  aspect-ratio: 1;
  color: white;
  border: none;
  padding: 5px;
  font-size: 18px;
  height: 3rem;
  width: 3rem;
  top: 0px;
  left: 0px;
  box-shadow: 0 2px 4px darkslategray;
  cursor: pointer;
  border-radius: 70%;
  transition: all 0.2s ease;
}

.content,
.main-container,
.app,
header {
  background-color: var(--background);
  z-index: 0;
}

.DarkModeToggle,
.Language_button {
  z-index: 1;
  margin: 1em;
  position: fixed;
}

.DarkModeToggle {
  top: 0px;
  right: 0px;
}

.app {
  font-size: 1.3125rem;
  line-height: 1.6;
}

.main-container {
  height: 100svh;
  max-height: 100svh;
  max-width: 100svw;
  align-items: center;
  justify-content: center;
  display: flex;
  overflow: auto;
}

.content {
  display: flex;
  flex-basis: 100%;
  max-height: 791px;
  height: 100vh;
  width: 100vw;
  max-width: 1280px;
  padding: 2.5rem;
  align-self: center;
  justify-content: end;
}


.left,
.right {
  align-self: center;
  flex: 1;
  display: block;
  border-radius: 3%;
}


.left {
  flex-basis: 30%;
  
}

.right {
  flex-basis: 70%;
  background-color: var(--background);
}

.menu {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background-color: var(--background);
}

.menu>* {
  flex-basis: 100%;
  margin: 0.5rem 0;
}


a {
  color: var(--text-secondary);
  text-align: right;
}

p {
  color: var(--text-primary);
}

.left::before{
  z-index: -1;
  content: "";
  display: block;
  position: relative;
  width: 5rem;
  height: 5rem;
  top: 230px;
  left: -5px;
  background: linear-gradient(136deg, var(--error)0%, var(--success)50%, var(--error)100%);
  border-radius: 10%;
}

.right::before{
  z-index: -1;
  content: "";
  display: block;
  position: relative;
  width: 10rem;
  height: 10rem;
  top: calc(10rem - 11rem);
  left: -1rem;
  background: linear-gradient(136deg, var(--error)0%, var(--success)50%, var(--error)100%);
  border-radius: 10%;
  opacity: 100%;
}



a {
  padding-left: 0.5em;
}




.top-right-box,
.bottom-right-box
{
  z-index: -1;
  position: absolute;
  border-radius: 10%;
  width: 11rem;
  height: 11rem;
  background-color: var(--background);
}


.bottom-right-box{
  align-self: flex-end;
}

.gradient{
  width: 9rem;
  height: 9rem;
  transform: translate(1rem, 1rem);
  background: linear-gradient(136deg, var(--error)0%, var(--success)50%, var(--error)100%);
  border-radius: 10%;

}

.gradient-top{
  transform: translate(1rem, -1rem);
}

@media (max-width: 800px) {
  .content {
    padding: 0 5rem;
    flex-direction: column;
    justify-content: end;
    align-items: flex-end;
    margin-bottom: 5rem;
  }

  .left,
  .right {
    padding: 0;
    margin: 0 0;
    margin-top: 1em;
  }

  .left {
    padding: 2.5rem 0;
  }

}

@media (max-width: 450px) {
  .content {
    padding: 0 1rem;
    flex-direction: column;
    justify-content: end;
    align-items: flex-end;
  }

  .left,
  .right {
    padding: 0;
    margin: 0 0;
    margin-top: 1em;
  }

  .left {
    padding: 2.5rem 0;
  }
}

